@@ -12,8 +12,10 @@ $LOAD_PATH.unshift MKMF_GNOME2_DIR
 
 require 'mkmf-gnome2'
 
-PKGConfig.have_package('libpanelapplet-2.0', 2, 6) or exit 1
+PKGConfig.have_package('libpanelapplet-2.0', 2, 4) or exit 1
 setup_win32(PACKAGE_NAME)
+
+have_header("panel-applet-enums.h")
 
 add_depend_package("glib2", "glib/src", TOPDIR)
 add_depend_package("gtk2", "gtk/src", TOPDIR)
