@@ -1,3 +1,7 @@
+2005-07-27  Masao Mutoh  <mutoh@highway.ne.jp>
+
+	* rbpanel-applet.c: Work under libpanel-applet-2.4.
+
 2005-07-26  Masao Mutoh  <mutoh@highway.ne.jp>
 
 	* extconf.rb: Check libpanel-applet version(2.6 or later). 
